shopping-cart/devops/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-cart-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: shopping-cart
  template:
    metadata:
      labels:
        app: shopping-cart
    spec:
      containers:
        - name: shopping-cart
          image: ghcr.io/smiggiddy/odin-codeprojects/shopping-cart:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: shopping-cart-service
spec:
  selector:
    app: shopping-cart
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
