shopping-cart/devops/shopping-cart-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopping-cart-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  rules:
  - host: shopping-cart.odin.thecodedom.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shopping-cart-service
            port:
              number: 80
  tls:
  - hosts:
    - shopping-cart.odin.thecodedom.com
    secretName: shopping-cart-tls
